--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <div id ='dive' > Willhoe</div>
-    <script src="Script.js"></script>
+    <script src="script.js"></script>
 </head>
 <body>
     
