--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <title>Document</title>
     <div id ='dive' > Willhoe</div>
     <script src="script.js"></script>
+    <script>
+    var title = document.getElementById('dive');
+    title.textContent = 'CRSNPACK';  
+    </script>
 </head>
 <body>
     
