--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ var request = new XMLHttpRequest();
 loadData();
  
 function loadData() {
-  request.open('GET', 'https://www.bungie.net/Platform');
+  request.open('GET', 'https://www.bungie.net/Platform/c78d73dcfe79494ca4152a4cfdb86411');
   request.onload = loadComplete;
   request.send();
 }
