--- a/index.html
+++ b/index.html
@@ -12,11 +12,14 @@
     title.textContent = 'CRSNPACK';  
 var data;
 var request = new XMLHttpRequest();
- 
+var apiKey = "c78d73dcfe79494ca4152a4cfdb86411"; 
+
+
 loadData();
  
 function loadData() {
-  request.open('GET', 'https://www.bungie.net/Platform/c78d73dcfe79494ca4152a4cfdb86411');
+  request.open('GET', 'https://www.bungie.net/platform/app/oauth/token/');
+  request.setRequestHeader("X-API-Key", apiKey);
   request.onload = loadComplete;
   request.send();
 }
