--- a/index.html
+++ b/index.html
@@ -24,8 +24,14 @@ xhr.addEventListener("readystatechange", function () {
 
 xhr.open("GET", "https://www.bungie.net/platform/GroupV2/2152633/Members/");
 xhr.setRequestHeader("x-api-key", "c78d73dcfe79494ca4152a4cfdb86411");
+xhr.onload = onLoad;
 xhr.send(data);
-console.log(JSON.parse(xhr.responseText));
+
+function onLoad(evt){
+data = JSON.parse(xhr.responseText);
+    console.log(data);
+}
+
 
     </script>
 </head>
