--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@ xhr.addEventListener("readystatechange", function () {
 
 xhr.open("GET", "https://www.bungie.net/platform/GroupV2/2152633/Members/");
 xhr.setRequestHeader("x-api-key", "c78d73dcfe79494ca4152a4cfdb86411");
+xhr.setRequestHeader("cache-control", "no-cache");
+xhr.setRequestHeader("Postman-Token", "cef8a866-37e5-4db1-9f2d-99b0eeaea95c");
 
 xhr.send(data);
 
